feat: sea scape

--- a/shadertoy-demo/gradient.html
+++ b/shadertoy-demo/gradient.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style/index.css" />
-    <title>gradient</title>
+    <style>
+      body {
+        color: #ffffff;
+        font-family: Monospace;
+        font-size: 13px;
+        text-align: center;
+        font-weight: bold;
+        background-color: #000000;
+        margin: 0px;
+        overflow: hidden;
+      }
+      #info {
+        position: absolute;
+        top: 0px;
+        width: 100%;
+        padding: 5px;
+      }
+    </style>
+    <title>Document</title>
   </head>
   <body>
     <div id="container"></div>
@@ -39,19 +56,20 @@
     </script>
 
     <script src="../utils/three.min.js"></script>
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "../utils/three.module.js"
-        }
-      }
-    </script>
-    <script type="module" src="../utils/HTMLTemplate.js"></script>
     <script>
-      let uniforms;
+      var container;
+      var camera, scene, renderer;
+      var uniforms;
 
       function init() {
-        let geometry = new THREE.PlaneBufferGeometry(2, 2);
+        container = document.getElementById("container");
+
+        camera = new THREE.Camera();
+        camera.position.z = 1;
+
+        scene = new THREE.Scene();
+
+        var geometry = new THREE.PlaneBufferGeometry(2, 2);
 
         uniforms = {
           time: {
@@ -64,17 +82,42 @@
           },
         };
 
-        let material = new THREE.ShaderMaterial({
+        var material = new THREE.ShaderMaterial({
           uniforms: uniforms,
           vertexShader: document.getElementById("vertexShader").textContent,
           fragmentShader: document.getElementById("fragmentShader").textContent,
         });
 
-        let mesh = new THREE.Mesh(geometry, material);
+        var mesh = new THREE.Mesh(geometry, material);
         scene.add(mesh);
+
+        renderer = new THREE.WebGLRenderer();
+        renderer.setPixelRatio(window.devicePixelRatio);
+        container.appendChild(renderer.domElement);
+
+        onWindowResize();
+
+        window.addEventListener("resize", onWindowResize, false);
       }
 
+      function onWindowResize(event) {
+        renderer.setSize(window.innerWidth, window.innerHeight);
+
+        uniforms.resolution.value.x = renderer.domElement.width;
+        uniforms.resolution.value.y = renderer.domElement.height;
+      }
+
+      function animate() {
+        requestAnimationFrame(animate);
+        render();
+      }
+
+      function render() {
+        uniforms.time.value += 0.05;
+        renderer.render(scene, camera);
+      }
       init();
+      animate();
     </script>
   </body>
 </html>
